--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,121 @@
+header.close nav.nav div.container .menu, header.close nav.nav div.container .menu-bg, header.close nav.nav div.container .menu-burger {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  text-align: center;
+  border-radius: 100%;
+  right: 25px;
+  top: 25px;
+  border-width: 0 0 1px;
+  z-index: 100;
+}
+
+header.close nav.nav div.container div.menu-bg {
+  position: fixed;
+  background: #f91791;
+  pointer-events: none;
+  transition: .3s;
+  right: 50px;
+  top: 50px;
+  transform: translate3d(50%, -50%, 0);
+  transform-origin: center center;
+  box-shadow: 0 2px 3px black;
+}
+
+header.close nav.nav div.container div.menu-bg.fs {
+  transform: translate3d(50%, -50%, 0);
+  width: 2000vw;
+  height: 2000vw;
+}
+
+header.close nav.nav div.container div.menu-burger {
+  position: fixed;
+  color: #fff;
+  padding-top: 10px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  cursor: pointer;
+  transition: .4s;
+  transform-origin: center;
+}
+
+header.close nav.nav div.container div.menu-burger.fs {
+  transform: rotate(-180deg) translateY(10px);
+  color: #fff;
+}
+
+header.close nav.nav div.container .menu-items {
+  font-family: 'Abril Fatface', serif;
+  font-size: 125px;
+  line-height: 120px;
+  position: fixed;
+  color: #fff;
+  width: 100%;
+  text-align: left;
+  opacity: 0;
+  transition: .4s;
+  margin-top: 25px;
+  transform: translateY(-200%);
+  pointer-events: none;
+  -webkit-font-smoothing: antialiased;
+  z-index: 101;
+}
+
+header.close nav.nav div.container .menu-items div {
+  color: #fff;
+  transition: 1s;
+  opacity: 0;
+}
+
+header.close nav.nav div.container .menu-items div a {
+  color: #fff;
+  text-decoration: none;
+}
+
+header.close nav.nav div.container .menu-items.fs {
+  transform: translateY(0);
+  pointer-events: auto;
+  opacity: 1;
+}
+
+header.close nav.nav div.container .menu-items.fs div {
+  color: #fff;
+  opacity: 1;
+}
+
+header.close nav.nav div.container .menu-items.fs div a {
+  color: #fff;
+  text-decoration: none;
+}
+
+header.close nav.nav div.container .menu-items.fs div a:hover {
+  color: #000;
+  text-decoration: none;
+  transition: .4s;
+}
+
+section#welcome div.skewed-bg {
+  padding: 200px 0;
+  -webkit-transform: skew(0deg, -3deg);
+  -moz-transform: skew(0deg, -3deg);
+  -ms-transform: skew(0deg, -3deg);
+  -o-transform: skew(0deg, -3deg);
+  transform: skew(0deg, -3deg);
+  margin-top: -200px;
+  background: linear-gradient(19deg, #000, #000);
+}
+
+section#welcome div.skewed-bg div.content {
+  -webkit-transform: skew(0deg, 3deg);
+  -moz-transform: skew(0deg, 3deg);
+  -ms-transform: skew(0deg, 3deg);
+  -o-transform: skew(0deg, 3deg);
+  transform: skew(0deg, 3deg);
+  text-align: center;
+}
+
 #contactMe {
   background-color: #f91791;
   text-align: center;
