--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -621,6 +621,7 @@ body > section > .holder > .title h2:after {
 	-ms-animation-delay: 15s;
 	animation-delay: 15s;
 }
+
 @-webkit-keyframes rotateWord {
 	0% { opacity: 0; }
 	2% { opacity: 0; -webkit-transform: translateY(-30px); }
@@ -1499,7 +1500,7 @@ padding: 200px 0;
 
 .ch-info .ch-info-back {
 	font-family: 'Prata', serif;
-	transform: rotate3d(0,1,0,180deg);
+	transform: rotate3d(0,1,0,180deg)
 
 }
 
@@ -1833,12 +1834,12 @@ padding: 200px 0;
 	flex-wrap: wrap;
 	height: 100vw;
 }
-.project {
+/* .project {
 		position: relative;
     background-color: #fff;
 		min-width: 230px;
 		max-width: 315px;
-}
+} */
 
 .gallery_container {
 	display: inline-flex;
@@ -1872,10 +1873,10 @@ padding: 200px 0;
 	top: 10px;
 	left: 10px;
 	opacity: 0;
-	transition: all 0.1s ease-in;
-	-webkit-transition: all 0.1s ease-in;
-	-moz-transition: all 0.1s ease-in;
-	-o-transition: all 0.1s ease-in;
+	-moz-transition: all 0.25s ease-in-out;
+	-o-transition: all 0.25s ease-in-out;
+	-webkit-transition: all 0.25s ease-in-out;
+	transition: all 0.25s ease-in-out;
 	overflow: hidden;
 
 }
@@ -2017,7 +2018,7 @@ border: 1px solid #000;
   margin-bottom: -1000px;
 	background: #000;
 	opacity: 0.7;
-	
+
 	/* transform: skew(0deg, -5deg);
   -webkit-animation: zigzag 1s linear infinite;
   animation: zigzag 1s linear infinite;
@@ -2097,7 +2098,6 @@ border: 1px solid #000;
 		-webkit-border-radius: 50%;
 		border-radius: 50%;
 		border: 2px solid #f91791;
-			/* border: 2px solid transparent; */
 		display: inline-block;
 		width: 55px;
 		height: 55px;
@@ -2301,6 +2301,10 @@ border: 1px solid #000;
 	padding: 0 0 35px;
 	color: #fff;
 	font-family: "Audrey-Normal", monospace;
+}
+#contactMe h2:after {
+	bottom: 15px;
+
 }
 
 #contactMe .button {
@@ -3338,3 +3342,140 @@ body>nav.hide-it {
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {...}
+
+@media (max-width: 1000px) {
+    .grid {
+        width: 100%;
+    }
+		.grid:after{
+			content: '';
+			display: block;
+			clear: both;
+
+		}
+		.grid-sizer,
+		.grid-item {
+		  width: 40%;
+
+		}
+    /* .gallery_container {
+        flex-basis: 49.80%;
+        margin-bottom: 3px;
+    } */
+    .pop {
+        width: 80%;
+        height: 70%;
+        margin: 15% auto;
+				left: 10%;
+				top:0;
+    }
+		.techUsed h3{
+			font-size: 16px;
+		}
+		.pop p{
+			font-size: 13px;
+			line-height: 16px;
+		}
+
+		.pop .button{
+    height: 45px;
+    line-height: 47px;
+    padding: 0 25px;
+    min-width: 130px;
+    font-size: 13px;
+		}
+}
+@media (max-width: 767px) {
+    .grid {
+        width: 100%;
+    }
+		.grid:after{
+			content: '';
+			display: block;
+			clear: both;
+
+		}
+		.grid-sizer,
+		.grid-item {
+		  width: 60%;
+
+		}
+    /* .gallery_container {
+        flex-basis: 49.80%;
+        margin-bottom: 3px;
+    } */
+    .pop {
+        width: 80%;
+        height: 70%;
+        margin: 15% auto;
+				left: 5%;
+				top:0;
+    }
+		.techUsed h3{
+			font-size: 16px;
+		}
+		.pop p{
+			font-size: 13px;
+			line-height: 16px;
+		}
+
+		.pop .button{
+    height: 45px;
+    line-height: 47px;
+    padding: 0 25px;
+    min-width: 130px;
+    font-size: 13px;
+		}
+}
+@media (max-width: 600px) {
+
+	.grid-sizer,
+	.grid-item {
+		width: 80%;
+
+	}
+    .gallery_container {
+        flex-basis: 100%;
+        margin-bottom: 1px;
+    }
+    .pop {
+        width: 90%;
+        margin: 20% auto;
+    }
+		.techUsed h3{
+			font-size: 16px;
+		}
+		.pop p{
+			font-size: 13px;
+			line-height: 16px;
+		}
+}
+@media (max-width: 480px) {
+
+	.grid-sizer,
+	.grid-item {
+		width: 80%;
+
+	}
+    .gallery_container {
+        flex-basis: 100%;
+        margin-bottom: 1px;
+    }
+    .pop {
+        width: 90%;
+        margin: 20% auto;
+    }
+		.pop h6{
+			font-size: 40px;
+		}
+			.techUsed{
+				/* width: 80%; */
+			}
+		.techUsed h3{
+			font-size: 14px;
+		}
+		.pop p{
+			font-size: 13px;
+			line-height: 16px;
+		}
+}
