--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -116,6 +116,221 @@ section#welcome div.skewed-bg div.content {
   text-align: center;
 }
 
+#resume {
+  background-color: #fff;
+  padding: 80px 0 210px 0;
+  text-align: center;
+  position: relative;
+}
+
+#resume .holder {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+#resume .holder .toggles .button {
+  font-family: "Abril Fatface", serif;
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #f91791;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  text-decoration: none;
+  height: 45px;
+  line-height: 47px;
+  min-width: 130px;
+  display: inline-block;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  font-size: 18px;
+  text-align: center;
+  cursor: pointer;
+}
+
+#resume .holder .toggles .button::before {
+  opacity: 0;
+  background: #f91791;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 150%;
+  height: 100%;
+  -moz-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
+  -ms-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
+  -webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
+  transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -4em, 0);
+  -moz-transition: -moz-transform 0.4s, opacity 0.4s, background-color 0.4s;
+  -o-transition: -o-transform 0.4s, opacity 0.4s, background-color 0.4s;
+  -webkit-transition: -webkit-transform 0.4s, opacity 0.4s, background-color 0.4s;
+  transition: transform 0.4s, opacity 0.4s, background-color 0.4s;
+  -moz-transform-origin: 0% 100%;
+  -ms-transform-origin: 0% 100%;
+  -webkit-transform-origin: 0% 100%;
+  transform-origin: 0% 100%;
+  z-index: -1;
+}
+
+#resume .holder .toggles .button:hover {
+  color: #fff;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+#resume .grid {
+  margin-top: 50px;
+}
+
+#resume .grid::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+#resume .grid .grid-sizer {
+  width: 30%;
+}
+
+#resume .grid .grid-item {
+  overflow: hidden;
+}
+
+#resume .grid .grid-item img {
+  display: block;
+  max-width: 100%;
+}
+
+#resume .grid .grid-item img:hover {
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+}
+
+#resume .grid .grid-item .project_info {
+  width: 95%;
+  height: 94%;
+  font-family: "Abril Fatface", serif;
+  font-size: 50px;
+  color: #000;
+  padding-top: 80px;
+  background: #f91791;
+  outline: 1px solid #000;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  opacity: 0;
+  transition: all 0.1s ease-in;
+  -webkit-transition: all 0.1s ease-in;
+  -moz-transition: all 0.1s ease-in;
+  -o-transition: all 0.1s ease-in;
+  overflow: hidden;
+}
+
+#resume .grid .grid-item .project_info:hover {
+  opacity: 0.9;
+}
+
+#resume .grid .grid-item .project_info span {
+  display: block;
+  font-size: 16px;
+}
+
+#resume .grid .grid-item .project_info .space20 {
+  margin-top: 20px;
+}
+
+#resume .grid .grid-item .pop .gal_btn {
+  position: absolute;
+  top: 4%;
+  right: 4%;
+  cursor: pointer;
+  font-size: 24px;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  border: 2px solid #f91791;
+  display: inline-block;
+  width: 55px;
+  height: 55px;
+  line-height: 55px;
+  padding: 0 5px;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  color: #f91791;
+  text-align: center;
+}
+
+#resume .grid .grid-item .pop .gal_btn:hover {
+  background: #f91791;
+  color: #fff;
+  text-shadow: 1px 1px 1px #000;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+#resume .grid .grid-item .pop h6 {
+  padding: 50px 30px 20px 30px;
+  color: #f91791;
+  font-size: 50px;
+}
+
+#resume .grid .grid-item .pop .techUsed {
+  /*position: absolute;*/
+  top: 0;
+  left: 0;
+  width: 100%;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
+  font-size: 1.75em;
+  text-align: center;
+  color: #000;
+  -webkit-animation: 3s fade;
+  animation: 3s fade;
+}
+
+#resume .grid .grid-item .pop .techUsed h3 {
+  display: inline-block;
+  position: relative;
+  padding: .5em .5em;
+}
+
+#resume .grid .grid-item .pop .techUsed h3::before {
+  display: block;
+  content: '';
+  width: 110%;
+  margin-left: -5%;
+  margin-bottom: 5%;
+  border-top: 1px solid #000;
+  -webkit-animation: 2.5s draw;
+  animation: 2.5s draw;
+  -moz-animation-delay: .5s;
+  -webkit-animation-delay: .5s;
+  animation-delay: .5s;
+}
+
+#resume .grid .grid-item .pop .techUsed h3::after {
+  display: block;
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  border-bottom: 1px solid #000;
+  -webkit-animation: 2.5s draw-bottom;
+  animation: 2.5s draw-bottom;
+  -moz-animation-delay: .5s;
+  -webkit-animation-delay: .5s;
+  animation-delay: .5s;
+}
+
 #contactMe {
   background-color: #f91791;
   text-align: center;
@@ -225,4 +440,213 @@ section#welcome div.skewed-bg div.content {
 
 #contactMe .copy {
   padding: 40px 0 0 0;
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    left: 20%;
+  }
+  100% {
+    opacity: 1;
+    left: 0;
+  }
+}
+
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@-webkit-keyframes rotateWord {
+  0% {
+    opacity: 0;
+  }
+  2% {
+    opacity: 0;
+    -webkit-transform: translateY(-30px);
+  }
+  5% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+  }
+  17% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+  }
+  20% {
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-ms-keyframes rotateWord {
+  0% {
+    opacity: 0;
+  }
+  2% {
+    opacity: 0;
+    -ms-transform: translateY(-30px);
+  }
+  5% {
+    opacity: 1;
+    -ms-transform: translateY(0px);
+  }
+  17% {
+    opacity: 1;
+    -ms-transform: translateY(0px);
+  }
+  20% {
+    opacity: 0;
+    -ms-transform: translateY(30px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes rotateWord {
+  0% {
+    opacity: 0;
+  }
+  2% {
+    opacity: 0;
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  5% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+  17% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+  20% {
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes gif {
+  0% {
+    background-position: -5270px;
+  }
+  100% {
+    background-position: 1px;
+  }
+}
+
+@-moz-keyframes gif {
+  from {
+    background-position: -5270px;
+  }
+  to {
+    background-position: 1px;
+  }
+}
+
+@-ms-keyframes gif {
+  from {
+    background-position: -5270px;
+  }
+  to {
+    background-position: 1px;
+  }
+}
+
+@-o-keyframes gif {
+  from {
+    background-position: -5270px;
+  }
+  to {
+    background-position: 1px;
+  }
+}
+
+@keyframes gif {
+  from {
+    background-position: -5270px;
+  }
+  to {
+    background-position: 0;
+  }
+}
+
+@keyframes draw {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 110%;
+  }
+}
+
+@keyframes draw-bottom {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes zigzag {
+  100% {
+    background-position: 1em 0, 1em 0, -0.75em 0 , -0.75em 0;
+  }
+}
+
+@keyframes zigzag {
+  100% {
+    background-position: 1em 0, 1em 0, -0.75em 0 , -0.75em 0;
+  }
 }
