--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1608,7 +1608,7 @@ padding: 200px 0;
 }
 
 .experience .row .muted {
-	text-indent: 15px;
+	/* text-indent: 15px; */
 	color: #777;
 	font-size: 30px;
 	font-family: 'Audrey-Normal';
@@ -2372,7 +2372,7 @@ border: 1px solid #000;
 	width: 55px;
 	height: 55px;
 	line-height: 55px;
-	margin: 0 5px;
+	margin: 5px;
 	-moz-transition: all 0.25s ease-in-out;
 	-o-transition: all 0.25s ease-in-out;
 	-webkit-transition: all 0.25s ease-in-out;
@@ -2547,6 +2547,7 @@ border: 1px solid #000;
 		#welcome {
 			background-position: center top;
 			background-size: 130%;
+			margin-top: -60px;
 		}
 
 		#welcome .close {
@@ -2589,6 +2590,9 @@ border: 1px solid #000;
 			font-size: 18px;
 			line-height: 1.2;
 		}
+		#welcome .welcome .buttonContainer {
+    margin-top: 30px;
+	}
 
 		#about {
 			padding: 0 0 150px 0;
@@ -2617,7 +2621,7 @@ border: 1px solid #000;
 		}
 
 		#about .title li {
-			font-size: 20px;
+			font-size: 18px;
 			margin: 0 10px;
 		}
 
@@ -3451,10 +3455,57 @@ body>nav.hide-it {
 		}
 }
 @media (max-width: 480px) {
+	.menu-bg {
+		/* position: fixed;
+		background: #f91791;
+		pointer-events: none;
+		transition: .3s;
+		right: 50px;
+		top: 50px;
+		transform: translate3d(50%, -50%, 0);
+		transform-origin: center center; */
+		box-shadow: 0 2px 3px rgba(0,0,0,0);
+	}
+	.menu-items {
+    font-size: 75px;
+		line-height: 1;
+    margin-top: 75px;
+    margin-left: 270px;
+}
+	#bio > p {
+  margin-top: 10px;
+    text-align: center;
+    font-size: 20px;
+    line-height: 30px;
+}
+	blockquote{
+		font-size: 16px;
+    padding: 5px 5px 0 5px;
+    margin-top: 5px;
+	}
+	#bio .links{
+			margin: 0 0 0 0;
+	}
 
+	.experience .row {
+	    margin-top: 25px;
+
+	}
+
+	.experience .companyHeading{
+		font-size: 35px;
+	}
+	.experience .containerHeading{
+    font-size: 35px;
+    /* margin-bottom: 5px; */
+
+	}
+	.experience .row .muted {
+	    font-size: 25px;
+	}
 	.grid-sizer,
 	.grid-item {
-		width: 80%;
+		width: 90%;
 
 	}
     .gallery_container {
@@ -3462,8 +3513,11 @@ body>nav.hide-it {
         margin-bottom: 1px;
     }
     .pop {
-        width: 90%;
-        margin: 20% auto;
+        /* width: 95%; */
+        /* margin: 5% auto; */
+				height: auto;
+
+
     }
 		.pop h6{
 			font-size: 40px;
@@ -3477,5 +3531,9 @@ body>nav.hide-it {
 		.pop p{
 			font-size: 13px;
 			line-height: 16px;
+		}
+		#resume .pop .links {
+			margin: 20px 0 20px 0;
+
 		}
 }
