--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1602,8 +1602,8 @@ padding: 200px 0;
 } */
 
 .experience .row  {
-	margin-top: 100px;
-	padding: 0 0 40px 0;
+	margin-top: 50px;
+	padding: 0 0 20px 0;
 	overflow: hidden;
 }
 
@@ -1628,7 +1628,7 @@ padding: 200px 0;
 	list-style: disc;
 	margin-left: 34px;
 	line-height: 24px;
-	font-size: 16px;
+	font-size: 15px;
 	font-family: 'Raleway', sans-serif;
 }
 
@@ -3340,9 +3340,16 @@ body>nav.hide-it {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {...}
-
+.experience .col-md-12{
+	 margin-left: 25px;
+	 }
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {...}
+@media only screen and (min-width: 992px) {
+
+	.experience .col-md-12{
+		 margin-left: 25px;
+		 }
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {...}
