--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -62,6 +62,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-family: "Abril Fatface";
+	min-width: 640px;
 }
 
 html {
