--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -3347,9 +3347,9 @@ body>nav.hide-it {
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
 
-	.experience .col-md-12{
+	/* .experience .col-md-12{
 		 margin-left: 25px;
-		 }
+		 } */
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -3479,7 +3479,7 @@ body>nav.hide-it {
     font-size: 75px;
 		line-height: 1;
     margin-top: 75px;
-    margin-left: 225px;
+    margin-left: 250px;
 }
 	#bio > p {
   margin-top: 10px;
