--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -3488,14 +3488,33 @@ body>nav.hide-it {
     line-height: 30px;
 }
 	blockquote{
-		font-size: 16px;
-    padding: 5px 5px 0 5px;
+		font-size: 14px;
+    /* padding: 5px 5px 0 5px; */
     margin-top: 5px;
 	}
+
 	#bio .links{
 			margin: 0 0 0 0;
 	}
+	.education .row {
+	    margin-top: 0;
+			padding: 0;
+			margin-left: 25px;
+	}
+	.education .row .brief {
+	    /* padding-left: 100px; */
+	    margin-bottom: 25px;
+	}
+	.education .row .brief .name {
+    font-size: 28px;
+    line-height: 28px;
+	}
 
+	.education .row .brief .position {
+    line-height: 27px;
+    font-size: 21px;
+    padding: 5px 0 0 0;
+}
 	.experience .row {
 	    margin-top: 25px;
 
@@ -3577,7 +3596,9 @@ blockquote {
     margin-top: -5px;
 }
 .education .row {
-    margin-top: 0;
+		margin-top: 0;
+		padding: 0;
+		margin-left: 40px;
 }
 /* aside{
 	margin-right: 20px;
